--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
     <section class="slide">
       <img src="images/slides/8.jpg" class="img-responsive" />
     </section>
-    <section class="slide">
-      <img src="images/slides/9.jpg" class="img-responsive" />
+
+    <section class="slide regional-stats">
+      <h1><img src="images/one-logo.png" alt="Menulog" /></h1>
+      <h2>Regional Stats</h2>
+      <img src="images/regional-stats.jpg" class="img-responsive" />
     </section>
+
     <section class="slide">
       <img src="images/slides/10.jpg" class="img-responsive" />
     </section>
