last slide menulog size edit

--- a/public/index.html
+++ b/public/index.html
@@ -389,7 +389,7 @@
 
     <div class="slide twentyfive">
       <div class="content">
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img style="left:260px;top:170px;" src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog-big.png" alt="Menulog" />
       </div>
       <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/25.png" class="img-background" />
     </div>
