--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>Menu Log</title>
-    <link rel="stylesheet" href="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/main.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/main.css" media="screen" charset="utf-8">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,27 +19,27 @@
 
     <div class="slide one">
       <div class="content">
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog-big.png" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog-big.png" />
         <h1>iPresentation</h1>
         <p class="paragraph-for">for</p>
         <h2>TR Name</h2>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/1.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/1.png" class="img-background" />
     </div>
 
     <div class="slide two">
       <div class="content">
         <h1>History of</h1>
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/justeat.png" class="justeat" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/justeat.png" class="justeat" />
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/2.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/2.png" class="img-background" />
     </div>
 
     <div class="slide three">
       <div class="content">
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/justeat.png" class="justeat" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/justeat.png" class="justeat" />
         <p class="one">The Menulog Group is Australia's leading online takeaway aggregator</p>
         <p class="two">We have around 2 million customers visit our websites per month around Australia</p>
         <p class="three">They have over 11 million active users worldwide and partner with over 60,000 restaurants and takeaways</p>
@@ -47,49 +47,49 @@
         <p class="five">There are 1,500 orders placed every minute</p>
         <p class="six">JUST EAT is the world's largest online ordering aggregator</p>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/3.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/3.png" class="img-background" />
     </div>
 
     <div class="slide four">
       <div class="content">
         <h1>Partners we work with</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/4.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/4.png" class="img-background" />
     </div>
 
     <div class="slide five">
       <div class="content">
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
         <h1>menulog.co.nz</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/5.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/5.png" class="img-background" />
     </div>
 
     <div class="slide six">
       <div class="content">
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
         <h1>How it works</h1>
         <h2>for you</h2>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/6.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/6.png" class="img-background" />
     </div>
 
     <div class="slide seven">
       <div class="content">
         <h1>OutDoor</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/7.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/7.png" class="img-background" />
     </div>
 
     <div class="slide eight">
       <div class="content">
         <h1>TV Commercials</h1>
         <h2>Menulog TVC</h2>
-        <span class="one"><strong>2014</strong><br>May 11th</span>
+        <span class="one"><strong>2014</strong><br></br>May 11th</span>
         <span class="two">June 24th</span>
         <span class="three">June 24th</span>
         <span class="four">June 24th</span>
-        <span class="five"><strong>2015</strong><br>May 11th</span>
+        <span class="five"><strong>2015</strong><br></br>>May 11th</span>
         <span class="six">July 15th</span>
         <div class="seven">
           <h3>Last Supper</h3>
@@ -109,14 +109,14 @@
         </div>
         <div class="eleven">
           <h3>TVC Retail</h3>
-          <a target=_blank href="https://www.youtube.com/watch?v=ydvYlpPnZjM">https://www.youtube.com/watch?v=ydvYlpPnZjM</a>
+          <a target="_blank" href="https://www.youtube.com/watch?v=ydvYlpPnZjM">https://www.youtube.com/watch?v=ydvYlpPnZjM</a>
         </div>
         <div class="twelve">
           <h3>TVC Retail</h3>
           <a target="_blank" href="https://www.youtube.com/watch?v=HjM6X-yn388">https://www.youtube.com/watch?v=HjM6X-yn388</a>
         </div>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/8.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/8.png" class="img-background" />
     </div>
 
     <div class="slide nine">
@@ -135,7 +135,7 @@
            <li>164</li>
         </ul>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/9.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/9.png" class="img-background" />
     </div>
 
     <div class="slide ten">
@@ -152,15 +152,15 @@
           <li>2015</li>
         </ul>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/10.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/10.png" class="img-background" />
     </div>
 
     <div class="slide eleven">
       <div class="content">
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
         <h1>Regional Stats</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/11.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/11.png" class="img-background" />
     </div>
 
     <div class="slide twelve">
@@ -172,11 +172,11 @@
         <p class="four">France $400</p>
         <p class="five">Australia and New Zealand...</p>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/12.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/12.png" class="img-background" />
     </div>
 
     <div class="slide thriteen">
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/13.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/13.png" class="img-background" />
     </div>
 
     <div class="slide fourteen">
@@ -184,7 +184,7 @@
         <h1>Pay As You Go</h1>
         <p><strong>12%</strong>Plus GST</p>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/14.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/14.png" class="img-background" />
     </div>
 
     <div class="slide fifteen">
@@ -204,9 +204,9 @@
             <td>$34.48</td>
           </tr>
         </table>
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/15.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/15.png" class="img-background" />
     </div>
 
     <div class="slide sixteen">
@@ -234,9 +234,9 @@
             <td class="blue">$2068.80</td>
           </tr>
         </table>
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/16.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/16.png" class="img-background" />
     </div>
 
     <div class="slide seventeen">
@@ -280,9 +280,9 @@
             <td class="blue">$22.48</td>
           </tr>
         </table>
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/17.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/17.png" class="img-background" />
     </div>
 
     <div class="slide eighteen">
@@ -313,7 +313,7 @@
           Delivery company bill the restaurant direct
         </p>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/18.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/18.png" class="img-background" />
     </div>
 
     <div class="slide nineteen">
@@ -346,52 +346,52 @@
             <td class="blue">$40.20</td>
           </tr>
         </table>
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/19.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/19.png" class="img-background" />
     </div>
 
     <div class="slide twenty">
       <div class="content">
-        <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
         <h1>Extra's</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/20.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/20.png" class="img-background" />
     </div>
 
     <div class="slide twentyone">
       <div class="content">
         <h1>Specials</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/21.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/21.png" class="img-background" />
     </div>
 
     <div class="slide twentytwo">
       <div class="content">
         <h1>Free Website</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/22.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/22.png" class="img-background" />
     </div>
 
     <div class="slide twentythree">
       <div class="content">
         <h1>Direct Links</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/23.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/23.png" class="img-background" />
     </div>
 
     <div class="slide twentyfour">
       <div class="content">
         <h1>Menu Printing</h1>
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/24.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/24.png" class="img-background" />
     </div>
 
     <div class="slide twentyfive">
       <div class="content">
-        <img style="left:260px;top:170px;" src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog-big.png" alt="Menulog" />
+        <img style="left:260px;top:170px;" src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog-big.png" alt="Menulog" />
       </div>
-      <img src="http://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/25.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/25.png" class="img-background" />
     </div>
 
   </div>
