--- a/public/australia.html
+++ b/public/australia.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>Menu Log</title>
-    <link rel="stylesheet" href="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/main.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="css/main.css" media="screen" charset="utf-8">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -14,7 +14,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-<body>
+<body id="australia">
   <div class="container">
 
     <div class="slide one">
@@ -32,22 +32,26 @@
         <h1>History of</h1>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/justeat.png" class="justeat" />
+        <img src="images/australia/eatnow.png" class="eatnow" />
       </div>
-      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/2.png" class="img-background" />
+      <img src="images/australia/2.png" class="img-background" />
     </div>
 
     <div class="slide three">
       <div class="content">
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/justeat.png" class="justeat" />
+        <img src="images/australia/eatnow.png" class="eatnow" />
         <p class="one">The Menulog Group is Australia's leading online takeaway aggregator</p>
         <p class="two">We have around 2 million customers visit our websites per month around Australia</p>
         <p class="three">They have over 11 million active users worldwide and partner with over 60,000 restaurants and takeaways</p>
         <p class="four">They acquired the Menulog Group in 2015 for $855m</p>
         <p class="five">There are 1,500 orders placed every minute</p>
         <p class="six">JUST EAT is the world's largest online ordering aggregator</p>
+        <p class="seven">EatNow is Menulog's sister website (originally a competitor).</p>
+        <p class="eight">They have a different database to Menulog (only about 13% cross over)</p>
       </div>
-      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/3.png" class="img-background" />
+      <img src="images/australia/3.png" class="img-background" />
     </div>
 
     <div class="slide four">
@@ -182,14 +186,16 @@
     <div class="slide fourteen">
       <div class="content">
         <h1>Pay As You Go</h1>
-        <p><strong>12%</strong>Plus GST</p>
+        <p class="one"><strong>10%</strong>Plus GST</p>
+        <p class="two"><strong>2%</strong>Card transaction fee</p>
+        <p class="three"><strong>$0.25c</strong>device charge per order</p>
       </div>
-      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/14.png" class="img-background" />
+      <img src="images/australia/14.png" class="img-background" />
     </div>
 
     <div class="slide fifteen">
       <div class="content">
-        <h1>Single Cash Order Breakdown</h1>
+        <h1>Single Card Order Breakdown $40</h1>
         <table class="table table-bordered table-striped">
           <tr>
             <td>Order Value</td>
@@ -197,56 +203,114 @@
           </tr>
           <tr>
             <td>ML Commission</td>
-            <td>$5.52</td>
+            <td>$4.40</td>
+          </tr>
+          <tr>
+            <td>Card Charge</td>
+            <td>$0.80</td>
+          </tr>
+          <tr>
+            <td>Device Fee</td>
+            <td>$0.25</td>
           </tr>
           <tr>
             <td>Revenue for restaurant</td>
-            <td>$34.48</td>
+            <td>$35.37</td>
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="images/australia/eatnow.png" class="eatnow" />
+      </div>
+      <img src="images/australia/15.png" class="img-background" />
+    </div>
+    <div class="slide fifteen2">
+      <div class="content">
+        <h1>Single Cash Order Breakdown $40</h1>
+        <table class="table table-bordered table-striped">
+          <tr>
+            <td>Order Value</td>
+            <td>$40</td>
+          </tr>
+          <tr>
+            <td>ML Commission</td>
+            <td>$4.40</td>
+          </tr>
+          <tr>
+            <td>Device Fee</td>
+            <td>$0.25</td>
+          </tr>
+          <tr>
+            <td>Revenue for restaurant</td>
+            <td>$35.45</td>
+          </tr>
+        </table>
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="images/australia/eatnow.png" class="eatnow" />
       </div>
       <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/15.png" class="img-background" />
     </div>
 
     <div class="slide sixteen">
       <div class="content">
-        <h1>Average Fortnightly Breakdown</h1>
+        <h1>Average Fortnight Cost Breakdown</h1>
         <table class="table table-bordered table-striped">
           <tr>
             <td></td>
+            <td class="yellow">Cash</td>
+            <td class="green">Card</td>
             <td class="blue">Total</td>
           </tr>
           <tr>
             <td>Orders</td>
+            <td class="yellow">20</td>
+            <td class="green">40</td>
             <td class="blue">60</td>
           </tr>
           <tr>
             <td>Order Value</td>
+            <td class="yellow">$800</td>
+            <td class="green">$1600</td>
             <td class="blue">$2400</td>
           </tr>
           <tr>
-            <td>ML Comission</td>
-            <td class="blue">$331.20</td>
+            <td>ML Commission</td>
+            <td class="yellow">$88</td>
+            <td class="green">$172</td>
+            <td class="blue">$260</td>
+          </tr>
+          <tr>
+            <td>Card Charge</td>
+            <td class="yellow">$0</td>
+            <td class="green">$32</td>
+            <td class="blue">$32</td>
+          </tr>
+          <tr>
+            <td>Device Fee</td>
+            <td class="yellow">$5</td>
+            <td class="green">$10</td>
+            <td class="blue">$15</td>
           </tr>
           <tr>
             <td>Profit</td>
-            <td class="blue">$2068.80</td>
+            <td class="yellow">$707</td>
+            <td class="green">$1385</td>
+            <td class="blue">$2092</td>
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="images/australia/eatnow.png" class="eatnow" />
       </div>
       <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/16.png" class="img-background" />
     </div>
 
     <div class="slide seventeen">
       <div class="content">
-        <h1>Single Order Breakdown</h1>
+        <h1>Single Order Breakdown vs Existing</h1>
         <table class="table table-bordered table-striped">
           <tr>
             <td></td>
             <td class="yellow">Current delivery</td>
-            <td class="green">Existing Switch</td>
+            <td class="green">ML Customer Switch</td>
             <td class="blue">New ML Customer</td>
           </tr>
           <tr>
@@ -270,17 +334,18 @@
           <tr>
             <td>ML Cost</td>
             <td class="yellow">$0</td>
-            <td class="green">$5.52</td>
-            <td class="blue">$5.52</td>
+            <td class="green">$4.73</td>
+            <td class="blue">$4.73</td>
           </tr>
           <tr>
             <td>Profit</td>
             <td class="yellow">$9</td>
-            <td class="green">$10.48</td>
-            <td class="blue">$22.48</td>
+            <td class="green">$11.27</td>
+            <td class="blue">$23.27</td>
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="images/australia/eatnow.png" class="eatnow" />
       </div>
       <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/17.png" class="img-background" />
     </div>
@@ -328,25 +393,26 @@
           <tr>
             <td>Food and Packaging Cost</td>
             <td class="green">$20</td>
-            <td class="blue">$100</td>
+            <td class="blue">$40</td>
           </tr>
           <tr>
             <td>ML Commission</td>
-            <td class="green">$6.90</td>
-            <td class="blue">$13.80</td>
+            <td class="green">$6.75</td>
+            <td class="blue">$13.25</td>
           </tr>
           <tr>
-            <td>Urban Sherpa</td>
-            <td class="green">$6</td>
-            <td class="blue">$6</td>
+            <td>Zoom2U Cost</td>
+            <td class="green">$7.50</td>
+            <td class="blue">$7.50</td>
           </tr>
           <tr>
             <td>Profit for Restaurant</td>
-            <td class="green">$17.10</td>
-            <td class="blue">$40.20</td>
+            <td class="green">$15.75</td>
+            <td class="blue">$39.25</td>
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
+        <img src="images/australia/eatnow.png" class="eatnow" />
       </div>
       <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/19.png" class="img-background" />
     </div>
@@ -363,28 +429,28 @@
       <div class="content">
         <h1>Specials</h1>
       </div>
-      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/21.png" class="img-background" />
+      <img src="images/australia/21.png" class="img-background" />
     </div>
 
     <div class="slide twentytwo">
       <div class="content">
         <h1>Free Website</h1>
       </div>
-      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/22.png" class="img-background" />
+      <img src="images/australia/22.png" class="img-background" />
     </div>
 
     <div class="slide twentythree">
       <div class="content">
         <h1>Direct Links</h1>
       </div>
-      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/23.png" class="img-background" />
+      <img src="images/australia/23.png" class="img-background" />
     </div>
 
     <div class="slide twentyfour">
       <div class="content">
         <h1>Menu Printing</h1>
       </div>
-      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/24.png" class="img-background" />
+      <img src="images/australia/24.png" class="img-background" />
     </div>
 
     <div class="slide twentyfive">
