--- a/public/australia.html
+++ b/public/australia.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>Menu Log</title>
-    <link rel="stylesheet" href="css/main.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/main.css" media="screen" charset="utf-8">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,16 +32,16 @@
         <h1>History of</h1>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/justeat.png" class="justeat" />
-        <img src="images/australia/eatnow.png" class="eatnow" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/eatnow.png" class="eatnow" />
       </div>
-      <img src="images/australia/2.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/2.png" class="img-background" />
     </div>
 
     <div class="slide three">
       <div class="content">
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" class="menulog" />
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/justeat.png" class="justeat" />
-        <img src="images/australia/eatnow.png" class="eatnow" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/eatnow.png" class="eatnow" />
         <p class="one">The Menulog Group is Australia's leading online takeaway aggregator</p>
         <p class="two">We have around 2 million customers visit our websites per month around Australia</p>
         <p class="three">They have over 11 million active users worldwide and partner with over 60,000 restaurants and takeaways</p>
@@ -51,7 +51,7 @@
         <p class="seven">EatNow is Menulog's sister website (originally a competitor).</p>
         <p class="eight">They have a different database to Menulog (only about 13% cross over)</p>
       </div>
-      <img src="images/australia/3.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/3.png" class="img-background" />
     </div>
 
     <div class="slide four">
@@ -190,7 +190,7 @@
         <p class="two"><strong>2%</strong>Card transaction fee</p>
         <p class="three"><strong>$0.25c</strong>device charge per order</p>
       </div>
-      <img src="images/australia/14.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/14.png" class="img-background" />
     </div>
 
     <div class="slide fifteen">
@@ -219,9 +219,9 @@
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
-        <img src="images/australia/eatnow.png" class="eatnow" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/eatnow.png" class="eatnow" />
       </div>
-      <img src="images/australia/15.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/15.png" class="img-background" />
     </div>
     <div class="slide fifteen2">
       <div class="content">
@@ -245,7 +245,7 @@
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
-        <img src="images/australia/eatnow.png" class="eatnow" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/eatnow.png" class="eatnow" />
       </div>
       <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/15.png" class="img-background" />
     </div>
@@ -298,7 +298,7 @@
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
-        <img src="images/australia/eatnow.png" class="eatnow" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/eatnow.png" class="eatnow" />
       </div>
       <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/16.png" class="img-background" />
     </div>
@@ -345,7 +345,7 @@
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
-        <img src="images/australia/eatnow.png" class="eatnow" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/eatnow.png" class="eatnow" />
       </div>
       <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/17.png" class="img-background" />
     </div>
@@ -412,7 +412,7 @@
           </tr>
         </table>
         <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/menulog.png" alt="Menulog" />
-        <img src="images/australia/eatnow.png" class="eatnow" />
+        <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/eatnow.png" class="eatnow" />
       </div>
       <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/NZ/19.png" class="img-background" />
     </div>
@@ -429,28 +429,28 @@
       <div class="content">
         <h1>Specials</h1>
       </div>
-      <img src="images/australia/21.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/21.png" class="img-background" />
     </div>
 
     <div class="slide twentytwo">
       <div class="content">
         <h1>Free Website</h1>
       </div>
-      <img src="images/australia/22.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/22.png" class="img-background" />
     </div>
 
     <div class="slide twentythree">
       <div class="content">
         <h1>Direct Links</h1>
       </div>
-      <img src="images/australia/23.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/23.png" class="img-background" />
     </div>
 
     <div class="slide twentyfour">
       <div class="content">
         <h1>Menu Printing</h1>
       </div>
-      <img src="images/australia/24.png" class="img-background" />
+      <img src="https://eatcdn.s3.amazonaws.com/Salesforce/Images/iPresentation/24.png" class="img-background" />
     </div>
 
     <div class="slide twentyfive">
